[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Jump0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Attack0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/dead0.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/Hit0.png" type="Texture" id=14]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/Player/melee1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/melee2.png" type="Texture" id=17]
[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://Sprites/Player/Drink0.png" type="Texture" id=19]
[ext_resource path="res://GUI2.tscn" type="PackedScene" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "melee",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": false,
"name": "drink",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.1228
height = 30.4068

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.8152, 24.6514 )

[sub_resource type="DynamicFont" id=4]
size = 31
outline_size = 1
font_data = ExtResource( 18 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 3
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -92.6677 ]
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fall"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.25995, 3.93723 )
shape = SubResource( 2 )

[node name="SwordHit" type="Area2D" parent="."]
visible = false
position = Vector2( 35.797, -4.313 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHit"]
shape = SubResource( 3 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.9, 0.9 )
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
pause_mode = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 4 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1280, 0 )
texture = ExtResource( 4 )
centered = false

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 70, 13 )

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1013.5
margin_top = -644.5
margin_right = 1013.5
margin_bottom = 644.5
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanPay" type="Label" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -96.0
margin_right = 212.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "HAS MORT

PREM START PER REVIURE
[250 ÀNIMES]
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CantPay" type="Label" parent="CanvasLayer/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -154.5
margin_right = 225.5
margin_bottom = 154.5
custom_fonts/font = SubResource( 4 )
text = "HAS MORT

NO TENS LES 250 ÀNIMES 
NECESSÀRIES PER REVIURE

PREM START PER 
MORIR DEFINITIVAMENT
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 15 )]
margin_top = -0.707123
margin_bottom = 465.96
rect_scale = Vector2( 0.7, 0.7 )

[node name="GUI2" parent="CanvasLayer" instance=ExtResource( 20 )]

[node name="ContactCD" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StaRegen" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 12.3569
margin_top = -44.3471
margin_right = 52.3569
margin_bottom = -30.3471
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Magic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeleeRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 11.765 )
enabled = true
cast_to = Vector2( 55, 0 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="SwordHit" to="." method="_on_SwordHit_body_entered"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]
[connection signal="timeout" from="ContactCD" to="." method="_on_ContactCD_timeout"]
[connection signal="timeout" from="StaRegen" to="." method="_on_StaRegen_timeout"]
